# fpl-metrics-app

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  fpl-tech-spec.md  output.json
etl/: .env.example  DEPLOY.md  Dockerfile  README.md  fpl_etl_specification.md  lambda-event-weekly.json  lambda-event.json  main.py  output.json  pyproject.toml  requirements.txt  template.yaml
etl/api/: fpl_client.py
etl/config/: S3Config.py  SnowflakeConfig.py
etl/daily/: extract.py  extract_pipeline.py  load.py  load_pipeline.py
etl/extract/: run_daily_extract.py  run_extract.py  run_weekly_extract.py
etl/extract/bootstrap/: __init__.py  pipeline.py
etl/extract/fixtures/: __init__.py  pipeline.py
etl/extract/player_details/: __init__.py  pipeline.py
etl/load/: run_daily_source_load.py  run_daily_stage_load.py  run_load.py  run_weekly_source_load.py  run_weekly_stage_load.py  snowflake_client.py
etl/load/source/: README.md
etl/load/source/events/: create_events_table.sql  pipeline.py  unflatten_events_data.sql
etl/load/source/fixtures/: create_fixtures_table.sql  pipeline.py  unflatten_fixtures_data.sql
etl/load/source/player_fixtures/: create_player_fixtures_table.sql  (+2 more)
etl/load/stage/: README.md  s3_to_snowflake_pipeline.py
etl/s3/: s3_datalake.py
etl/snowflake/: snowflake_loader.py
etl/snowflake/sql/: create_bootstrap_raw.sql  create_bootstrap_staging.sql  create_bootstrap_transformed.sql  update_bootstrap_raw.sql  update_bootstrap_transformed.sql
etl/snowflake_client/: snowflake_client.py
etl/weekly/: README.md
(+73 files in other folders)
