[project]
name = "fpl-etl"
version = "0.1.0"
description = "Fantasy Premier League ETL Pipeline"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40.0",
    "requests>=2.32.3",
    "snowflake-connector-python>=3.18.0",
    "python-dotenv>=1.2.0",
    "cryptography>=43.0.0",
    "pyarrow>=18.0.0",
]

[project.scripts]
fpl-etl = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "api",
    "extract", 
    "load",
    "s3",
    "snowflake_client"
]

[tool.uv]
dev-dependencies = []